[project]
name = "chesnok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.13",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
